@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2020 Tada AB and other contributors, as listed below.
+ * Copyright (c) 2004-2025 Tada AB and other contributors, as listed below.
  *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the The BSD 3-Clause License
@@ -16,6 +16,8 @@ package org.postgresql.pljava.jdbc;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.sql.Array;
 import java.sql.Blob;
@@ -848,9 +850,9 @@ public class SPIConnection implements Connection
 		{
 			try
 			{
-				return (T)new URL((String)value);
+				return (T)new URI((String)value).toURL();
 			}
-			catch(MalformedURLException e)
+			catch(URISyntaxException | MalformedURLException e)
 			{
 				throw new SQLException(e.toString());
 			}
